# kafka-client

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docker/: docker-compose.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: cluster.rs  consumer_group.rs  message.rs  mod.rs  topic.rs
src-tauri/src/kafka/: admin.rs  client.rs  consumer.rs  consumer_group.rs  mod.rs  producer.rs
src-tauri/src/models/: cluster.rs  consumer_group.rs  message.rs  topic.rs
src/components/cluster/: BrokerList.vue  ClusterForm.vue  ClusterList.vue  ClusterManager.vue  ClusterSwitch.vue  ClusterTabBar.vue
src/components/common/: AboutDialog.vue  ConfirmDialog.vue  IconButton.vue  UpdateDialog.vue
src/components/consumer/: ConsumerGroupDetail.vue  ConsumerGroupList.vue  ResetOffsetsModal.vue
src/components/icons/: ConsumerGroupIcon.vue  TopicIcon.vue
src/components/message/: MessageList.vue  ProduceDialog.vue  ProduceForm.vue
src/components/settings/: SettingsPopup.vue
src/components/topic/: TopicForm.vue  TopicList.vue
src/composables/: useClusterDrag.ts  useKeyboardShortcuts.ts  useUpdater.ts
src/config/: icons.ts
src/i18n/: en-US.ts  index.ts  zh-CN.ts
src/layouts/: IconSidebar.vue  SecondSidebar.vue  TabBar.vue
src/router/: index.ts
src/stores/: cluster.ts  consumer.ts  index.ts  message.ts  tabs.ts  theme.ts  topic.ts
src/styles/: buttons.css  form.css  glass.css  theme.css  themes.css
src/utils/: tauri.ts  window.ts
src/views/: Cluster.vue  ConsumerGroup.vue  Message.vue  Topic.vue
(+4 files in other folders)
